5050 bug fixes 1 (#18)
* 5050-25: Fixed broken error handling for draw create form (#13)

* fixed long name issue for winner ticket

* fixed broken error handling for draw create form

* removed console log

* fixed long name cut off issue for winner ticket (#17)

* 5050-19 Remove Currency Conversion (#16)

* fixed long name issue for winner ticket

* fixed broken error handling for draw create form

* removed console log

* removed all assets aside from ppy

* removed all instances of hardcoded precision

* fixed landing page crashing

* fixed drawdetails jackpot roller

* 5050-18 Fixed draw details timed ticket count displaying 1 after all tickets were purchased (#15)

* fixed long name issue for winner ticket

* fixed timed draw bug

* 5050-21-22 (#14)

* Initial push.

* Bump eslint from 3.19.0 to 4.18.2

Bumps [eslint](https://github.com/eslint/eslint) from 3.19.0 to 4.18.2.
- [Release notes](https://github.com/eslint/eslint/releases)
- [Changelog](https://github.com/eslint/eslint/blob/master/CHANGELOG.md)
- [Commits](https://github.com/eslint/eslint/compare/v3.19.0...v4.18.2)


* Bump serve from 6.4.3 to 7.1.3

Bumps [serve](https://github.com/zeit/serve) from 6.4.3 to 7.1.3.
- [Release notes](https://github.com/zeit/serve/releases)
- [Commits](https://github.com/zeit/serve/compare/6.4.3...7.1.3)


* Bump webpack-dev-server from 2.11.2 to 3.1.11

Bumps [webpack-dev-server](https://github.com/webpack/webpack-dev-server) from 2.11.2 to 3.1.11.
- [Release notes](https://github.com/webpack/webpack-dev-server/releases)
- [Changelog](https://github.com/webpack/webpack-dev-server/blob/master/CHANGELOG.md)
- [Commits](https://github.com/webpack/webpack-dev-server/compare/v2.11.2...v3.1.11)


* Bump webpack-bundle-analyzer from 2.11.1 to 3.3.2

Bumps [webpack-bundle-analyzer](https://github.com/webpack-contrib/webpack-bundle-analyzer) from 2.11.1 to 3.3.2.
- [Release notes](https://github.com/webpack-contrib

--- a/assets/scss/_theme.scss
+++ b/assets/scss/_theme.scss
@@ -51,7 +51,6 @@
 
     &:hover {
       color: $CurrencySelectColorHover;
-      cursor: pointer;
     }
   }
 }
